[tool.poetry]
name = "avro-byte-counter"
version = "0.1.1"
description = "Count number of bytes per field"
authors = ["Louis Fruleux <louis.fruleux1@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
avro = "^1.11.1"

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.19.0"
pytest = "^7.3.1"
black = "^23.3.0"
pyright = "^1.1.310"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pyright]
rootDir = "/"

[tool.poe.tasks]
test = "pytest"
black = "black ."
check-black = "black . --check"
pyright = "pyright src"
lint = ["black"]
check-lint = ["check-black", "pyright"]

[virtualenvs]
in-project = true